[package]
name = "libfdt-sys"
description = "A sys crate for libfdt."
authors = ["Romain Malmain <rmalmain@pm.me>"]
version = "0.0.1"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/rmalmain/libfdt-sys"
keywords = ["libfdt", "dtc", "dt", "devicetree", "fdt"]
categories = ["external-ffi-bindings"]
links = "fdt"

[build-dependencies]
meson-next = "1.2.3"
bindgen = "0.72.0"

[features]
static = []
shared = []
